--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,11 @@
 NEXT_PUBLIC_URL=baseminiapp-test.vercel.app
+
+# Base Art NFT (Base Sepolia)
+# Deploy: npm run deploy:art (requires DEPLOYER_PRIVATE_KEY and Base Sepolia testnet ETH)
+# Get testnet ETH: https://www.coinbase.com/faucets/base-sepolia-faucet
+# DEPLOYER_PRIVATE_KEY=0x...   (wallet with testnet ETH; optional: BASE_SEPOLIA_RPC_URL)
+# After deploy, set:
+# NEXT_PUBLIC_NFT_CONTRACT_ADDRESS=0x...
+
+# Pinata IPFS (free): https://app.pinata.cloud/ → API Keys → New Key → JWT
+# PINATA_JWT=eyJ...
