--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy:art": "hardhat run scripts/deploy.js --network baseSepolia"
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
     "@farcaster/miniapp-sdk": "^0.1.8",
+    "@openzeppelin/contracts": "^5.4.0",
+    "@rainbow-me/rainbowkit": "^2.2.10",
     "@tanstack/react-query": "^5.81.5",
     "next": "15.3.6",
+    "openzeppelin-contracts": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "viem": "^2.31.6",
@@ -22,12 +26,16 @@
     "@eslint/eslintrc": "^3",
     "@farcaster/quick-auth": "^0.0.7",
     "@next/eslint-plugin-next": "^15.3.4",
+    "@nomicfoundation/hardhat-ethers": "^3.0.6",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^16.4.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "ethers": "^6.13.0",
+    "hardhat": "^2.22.0",
     "typescript": "^5"
   }
 }
