--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy:art": "hardhat run scripts/deploy.js --network baseSepolia"
   },
   "dependencies": {
+    "@base-org/account": "^2.5.2",
     "@coinbase/onchainkit": "latest",
     "@farcaster/miniapp-sdk": "^0.1.8",
     "@openzeppelin/contracts": "^5.4.0",
